--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "cumic"
+name                     : "cumic06"
 description              : "An amazing website."
 url                      : "https://cumic06.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
