--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "cumic06"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am **gameProgramer**."
+  bio              : "I am **GameClientDeveloper**."
   location         : "Somewhere"
   email            :
   links:
