--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "cumic06"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am **GameClientDeveloper**."
-  location         : "Somewhere"
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
