--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   :  true
+search_full_content      :  true
 search_provider          : # lunr (default), algolia, google
 lunr:
   search_within_pages    : # true, false (default)
@@ -143,7 +143,7 @@ footer:
       # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-      # url:
+       url: https://github.com/cumic06?tab=repositories
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
