--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    :  "dark"
 locale                   : "ko-KR"
 title                    : "cumic개발 블로그"
 title_separator          : "|"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Developer"
 name                     : "cumic"
 description              : "cumic의 개발 블로그입니다."
 url                      : "https://cumic06.github.io"
