--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    :  "dark"
 
 # Site Settings
-locale                   : "ko-KR"
+locale                   : "en-US"
 title                    : "cumic개발 블로그"
 title_separator          : "|"
 subtitle                 : "Developer"
