--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   :  true
-search_full_content      :  true
+search                   : #true
+search_full_content      : #true
 search_provider          : # lunr (default), algolia, google
 lunr:
   search_within_pages    : # true, false (default)
@@ -96,7 +96,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : false
   google:
     tracking_id          :
     anonymize_ip         : # true, false (default)
