--- a/_config.yml
+++ b/_config.yml
@@ -106,9 +106,9 @@ analytics:
 author:
   name             : "cumic06"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am **GameClientDeveloper**."
+  bio              : "cumic의 개발 블로그입니다!"
   location         : "South Korea"
-  email            :
+  email            : changhwan060224@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
