--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-#breadcrumbs              : true
+breadcrumbs              : true
 words_per_minute         : 200
 comments:
   provider               :  "disqus" #(default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -108,7 +108,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "cumic의 개발 블로그입니다!"
   location         : "South Korea"
-  email            : changhwan060224@gmail.com
+  email            : #changhwan060224@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
