--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:changhwan060224@email.com"
-    - label: "Website"
+    - label: "Notion"
       icon: "fas fa-fw fa-link"
       url: https://www.notion.so/c43c8f39ce0149f79ba479ac548485c6?pvs=4
     - label: "GitHub"
