--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "828e6438c1e996fe1a8042fd0c23dc78490cd7e3"
 yandex_site_verification :
 baidu_site_verification  :
 
