--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
       url: #"mailto:changhwan060224@email.com"
     - label: "Notion"
       icon: "fas fa-fw fa-link"
-      url: https://www.notion.so/c43c8f39ce0149f79ba479ac548485c6?pvs=4
+      url: https://judicious-count-94f.notion.site/27e9ef76db0645cf9d7dd0258e98393d?pvs=4
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cumic06"
