--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       url: #"mailto:changhwan060224@email.com"
     - label: "Notion"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-fw fa-notion"
       url: https://judicious-count-94f.notion.site/27e9ef76db0645cf9d7dd0258e98393d?pvs=4
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
