--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    :  "dark"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "쿠믹개발 블로그"
+title                    : "쿠믹의 개발 블로그"
 title_separator          : "|"
 subtitle                 : "Developer"
 name                     : "cumic"
-description              : "cumic의 개발 블로그입니다."
+description              : "쿠믹의 개발 블로그입니다."
 url                      : "https://cumic06.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "쿠믹"
   avatar           : "assets/Images/IProfile.jpg"
-  bio              : "쿠믹의 개발 블로그입니다!"
+  bio              : "배운게 있거나 알고있는 것을 올리는 블로그입니다!"
   location         : "South Korea"
   email            : #changhwan060224@gmail.com
   links:
