--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "쿠믹"
   avatar           : "assets/Images/IProfile.jpg"
-  bio              : "배운게 있거나 알고있는 것을 올리는 블로그입니다!"
+  bio              : "배우거나 알고있는 것을 올리는 블로그입니다!"
   location         : "South Korea"
   email            : #changhwan060224@gmail.com
   links:
