--- a/_config.yml
+++ b/_config.yml
@@ -113,9 +113,9 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: #"mailto:changhwan060224@email.com"
-    - label: "Notion"
-      icon: "fas fa-fw fa-book"
-      url: https://judicious-count-94f.notion.site/27e9ef76db0645cf9d7dd0258e98393d?pvs=4
+    # - label: "Notion"
+      # icon: "fas fa-fw fa-book"
+      # url: https://judicious-count-94f.notion.site/27e9ef76db0645cf9d7dd0258e98393d?pvs=4
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cumic06"
